--- a/sources/css/style.less
+++ b/sources/css/style.less
@@ -1763,22 +1763,6 @@ body {
                         margin: 0;
                     }
                 }
-
-                // .g02 {
-
-                //     h3 {
-                //         margin-top: 25px;
-
-                //         &::before {
-                //             content: "";
-                //             .block;
-                //             width: 40px;
-                //             height: 4px;
-                //             background: #D9D9D9;
-                //             margin: 0 auto 20px auto;
-                //         }
-                //     }
-                // }
             }
 
             section.contents {
@@ -1935,7 +1919,7 @@ body {
                             li {
 
                                 ul.order {
-                                    padding: 10px 0;
+                                    .mapazero;
                                     border: none;
                                 }
                             }
@@ -1943,6 +1927,10 @@ body {
                             &.care-list {
                                 margin-top: 0;
                                 border-top: none;
+
+                                li.eq {
+                                    margin: 40px 0 0 10px;
+                                }
                             }
                         }
 
