--- a/sources/css/style.less
+++ b/sources/css/style.less
@@ -1884,6 +1884,13 @@ body {
                         }
                     }
 
+                    div.con02 {
+                        span {
+                            .block;
+                            margin: 5px 0 0 164px;
+                        }
+                    }
+
                     div.con03 {
 
                         div.care {
@@ -2738,7 +2745,7 @@ body {
                                 .relative;
                                 background: url("@{img-url}/organization.svg") no-repeat center / cover;
                                 width: 980px;
-                                height: 409px;
+                                height: 501px;
                                 margin-top: 30px;
                                
 
@@ -2776,17 +2783,49 @@ body {
                                         }
 
                                         &:nth-child(3) {
-                                            bottom: 0;
+                                            bottom: 94px;
                                             left: 0;
                                         }
 
                                         &:nth-child(4) {
-                                            bottom: 0;
+                                            bottom: 94px;
                                             left: 50%;
                                             margin-left: -123px;
                                         }
 
                                         &:nth-child(5) {
+                                            bottom: 94px;
+                                            right: 0;
+                                        }
+                                    }
+                                }
+
+                                ul.work {
+                                    .mapazero;
+                                    .no-list;
+
+                                    li {
+                                        .absolute;
+                                        width: 246px;
+                                        height: 70px;
+                                        line-height: 72px;
+                                        .center;
+                                        border-radius: 10px;
+                                        font-size: 18px;
+                                        color: #555;
+
+                                        &:nth-child(1) {
+                                            bottom: 0;
+                                            left: 0;
+                                        }
+
+                                        &:nth-child(2) {
+                                            bottom: 0;
+                                            left: 50%;
+                                            margin-left: -123px;
+                                        }
+
+                                        &:nth-child(3) {
                                             bottom: 0;
                                             right: 0;
                                         }
